--- a/app/src/main/res/menu/menu_oauth.xml
+++ b/app/src/main/res/menu/menu_oauth.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="koala.weibo.OauthActivity">
+    tools:context="koala.weibo.ui.login.OauthActivity">
     <item
         android:id="@+id/action_settings"
         android:icon="?refresh"
